# TradingBotVesta

./: README.md  pom.xml
Common/: pom.xml
Common/src/main/java/xyz/cereshost/common/: Vesta.java
Compiler/: pom.xml
Core/: pom.xml
Core/native/: CMakeLists.txt  library.h
Core/native/src/: TriangularArbitrage.cpp  sortMarket.cpp
Core/src/test/java/xyz/cereshost/blocks/: SoftPlusLogBlockTest.java  TemporalTransformerBlockTest.java
EngineVesta/: pom.xml
EngineVesta/src/main/java/xyz/cereshost/: BinanceApi.java  BinanceApiRest.java  Main.java
EngineVesta/src/main/java/xyz/cereshost/blocks/: CausalMaskManager.java  ScaledDotProductAttentionOptimizableBlock.java  SoftPlusLogBlock.java  TemporalTransformerBlock.java
EngineVesta/src/main/java/xyz/cereshost/engine/: BackTestEngine.java  PredictionEngine.java  VestaEngine.java  VestaLoss.java
EngineVesta/src/main/java/xyz/cereshost/exception/: BinanceApiRequestException.java  BinanceApiSignedRequestException.java  BinanceCodeException.java
EngineVesta/src/main/java/xyz/cereshost/io/: IOMarket.java  IOdata.java  TradeSerializable.java
EngineVesta/src/main/java/xyz/cereshost/message/: DiscordNotification.java  MediaNotification.java  Notifiable.java
EngineVesta/src/main/java/xyz/cereshost/metrics/: MaxDiffEvaluator.java  MetricsListener.java  MinDiffEvaluator.java
EngineVesta/src/main/java/xyz/cereshost/strategy/: AlfaStrategy.java  BetaStrategy.java  DefaultStrategy.java  DeltaStrategy.java  EpsilonStrategy.java  EtaStrategy.java  GammaStrategy.java  TestStrategy.java  TradingStrategy.java  (+1 more)
UI/: pom.xml
(+208 files in other folders)
